--- a/Complete Notebook.ipynb
+++ b/Complete Notebook.ipynb
@@ -653,8 +653,11 @@
     }
    ],
    "source": [
+    "#Creating some folders if they don't exist\n",
     "from pathlib import Path\n",
     "Path(\"saved_model\").mkdir(exist_ok=True)\n",
+    "Path(\"debug_log\").mkdir(exist_ok=True)\n",
+    "Path(\"debug_stats\").mkdir(exist_ok=True)\n",
     "\n",
     "num_episodes = 10\n",
     "env = create_snake_environment(r\"snakeai/levels/10x10-blank.json\")\n",
@@ -679,7 +682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running the Trained Agent"
+    "## Running the Agent"
    ]
   },
   {
@@ -721,10 +724,10 @@
     "env = create_snake_environment(r\"snakeai/levels/10x10-blank.json\")\n",
     "load_model = tf.keras.models.load_model(r\"saved_model/dqn-final.h5\")\n",
     "\n",
-    "agent = DeepQNetworkAgent(model=load_model, memory_size=-1, num_last_frames=4)\n",
+    "agent_DQN = DeepQNetworkAgent(model=load_model, memory_size=-1, num_last_frames=4)\n",
+    "agent_human = HumanAgent()\n",
     "\n",
-    "#play_gui(env, agent, 2) #(environment, agent, number of episodes)\n",
-    "play_gui(env, HumanAgent(), 2)"
+    "play_gui(env, agent_human, 2) #(environment, agent, number of episodes)"
    ]
   },
   {
