--- a/Complete Notebook.ipynb
+++ b/Complete Notebook.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,6 +334,8 @@
     "\n",
     "    # Dense layers.\n",
     "    model.add(Flatten())\n",
+    "    model.add(Dense(256))\n",
+    "    model.add(Activation('relu'))\n",
     "    model.add(Dense(256))\n",
     "    model.add(Activation('relu'))\n",
     "    model.add(Dense(env.num_actions))\n",
@@ -608,47 +610,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_5\"\n",
+      "Model: \"sequential_7\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_10 (Conv2D)           (None, 16, 8, 8)          592       \n",
+      "conv2d_14 (Conv2D)           (None, 16, 8, 8)          160       \n",
       "_________________________________________________________________\n",
-      "activation_15 (Activation)   (None, 16, 8, 8)          0         \n",
+      "activation_21 (Activation)   (None, 16, 8, 8)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_11 (Conv2D)           (None, 32, 6, 6)          4640      \n",
+      "conv2d_15 (Conv2D)           (None, 32, 6, 6)          4640      \n",
       "_________________________________________________________________\n",
-      "activation_16 (Activation)   (None, 32, 6, 6)          0         \n",
+      "activation_22 (Activation)   (None, 32, 6, 6)          0         \n",
       "_________________________________________________________________\n",
-      "flatten_5 (Flatten)          (None, 1152)              0         \n",
+      "flatten_7 (Flatten)          (None, 1152)              0         \n",
       "_________________________________________________________________\n",
-      "dense_10 (Dense)             (None, 256)               295168    \n",
+      "dense_14 (Dense)             (None, 256)               295168    \n",
       "_________________________________________________________________\n",
-      "activation_17 (Activation)   (None, 256)               0         \n",
+      "activation_23 (Activation)   (None, 256)               0         \n",
       "_________________________________________________________________\n",
-      "dense_11 (Dense)             (None, 3)                 771       \n",
+      "dense_15 (Dense)             (None, 3)                 771       \n",
       "=================================================================\n",
-      "Total params: 301,171\n",
-      "Trainable params: 301,171\n",
+      "Total params: 300,739\n",
+      "Trainable params: 300,739\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
-      "Episode     1/   10 | Loss   7.5721 | Exploration 0.82 | Fruits  0 | Timesteps   10 | Total Reward   -1\n",
-      "Episode     2/   10 | Loss   1.2870 | Exploration 0.64 | Fruits  1 | Timesteps   10 | Total Reward    3\n",
-      "Episode     3/   10 | Loss  23.6057 | Exploration 0.46 | Fruits  0 | Timesteps   10 | Total Reward   -1\n",
-      "Episode     4/   10 | Loss   9.8662 | Exploration 0.28 | Fruits  0 | Timesteps   23 | Total Reward   -1\n",
-      "Episode     5/   10 | Loss   2.4016 | Exploration 0.10 | Fruits  0 | Timesteps   20 | Total Reward   -1\n",
-      "Episode     6/   10 | Loss   1.5704 | Exploration -0.08 | Fruits  0 | Timesteps   13 | Total Reward   -1\n",
-      "Episode     7/   10 | Loss   2.4408 | Exploration -0.08 | Fruits  0 | Timesteps   53 | Total Reward   -1\n",
-      "Episode     8/   10 | Loss   5.5820 | Exploration -0.08 | Fruits  0 | Timesteps 1000 | Total Reward    0\n",
-      "Episode     9/   10 | Loss   0.0204 | Exploration -0.08 | Fruits  0 | Timesteps   11 | Total Reward   -1\n",
-      "Episode    10/   10 | Loss   0.2691 | Exploration -0.08 | Fruits  2 | Timesteps   36 | Total Reward    8\n"
+      "Episode     1/  100 | Loss 250.6310 | Exploration 0.98 | Fruits  0 | Timesteps   13 | Total Reward -112\n",
+      "Episode     2/  100 | Loss 1695.8296 | Exploration 0.96 | Fruits  0 | Timesteps   16 | Total Reward -115\n",
+      "Episode     3/  100 | Loss 285.8209 | Exploration 0.95 | Fruits  0 | Timesteps    5 | Total Reward -104\n",
+      "Episode     4/  100 | Loss 358.4094 | Exploration 0.93 | Fruits  0 | Timesteps    6 | Total Reward -105\n",
+      "Episode     5/  100 | Loss 706.4496 | Exploration 0.91 | Fruits  0 | Timesteps    8 | Total Reward -107\n",
+      "Episode     6/  100 | Loss 482.1189 | Exploration 0.89 | Fruits  0 | Timesteps    7 | Total Reward -106\n",
+      "Episode     7/  100 | Loss 219.2808 | Exploration 0.87 | Fruits  0 | Timesteps    7 | Total Reward -106\n",
+      "Episode     8/  100 | Loss 341.3959 | Exploration 0.86 | Fruits  0 | Timesteps   17 | Total Reward -116\n",
+      "Episode     9/  100 | Loss 482.9021 | Exploration 0.84 | Fruits  0 | Timesteps   25 | Total Reward -124\n",
+      "Episode    10/  100 | Loss 209.5167 | Exploration 0.82 | Fruits  0 | Timesteps    6 | Total Reward -105\n",
+      "Episode    11/  100 | Loss 382.8925 | Exploration 0.80 | Fruits  0 | Timesteps   11 | Total Reward -110\n",
+      "Episode    12/  100 | Loss 231.6937 | Exploration 0.78 | Fruits  0 | Timesteps    6 | Total Reward -105\n",
+      "Episode    13/  100 | Loss 269.8261 | Exploration 0.77 | Fruits  0 | Timesteps    7 | Total Reward -106\n",
+      "Episode    14/  100 | Loss 1494.4194 | Exploration 0.75 | Fruits  0 | Timesteps   28 | Total Reward -127\n",
+      "Episode    15/  100 | Loss 15200.1732 | Exploration 0.73 | Fruits  2 | Timesteps   50 | Total Reward  753\n",
+      "Episode    16/  100 | Loss 19475.6401 | Exploration 0.71 | Fruits  0 | Timesteps   10 | Total Reward -109\n",
+      "Episode    17/  100 | Loss 38644.7701 | Exploration 0.69 | Fruits  1 | Timesteps   19 | Total Reward  283\n",
+      "Episode    18/  100 | Loss 18416.2169 | Exploration 0.68 | Fruits  0 | Timesteps    9 | Total Reward -108\n",
+      "Episode    19/  100 | Loss 82632.3934 | Exploration 0.66 | Fruits  1 | Timesteps   30 | Total Reward  272\n",
+      "Episode    20/  100 | Loss 24427.5747 | Exploration 0.64 | Fruits  0 | Timesteps    8 | Total Reward -107\n",
+      "Episode    21/  100 | Loss 28047.9468 | Exploration 0.62 | Fruits  0 | Timesteps    9 | Total Reward -108\n",
+      "Episode    22/  100 | Loss 51320.9221 | Exploration 0.60 | Fruits  0 | Timesteps   15 | Total Reward -114\n",
+      "Episode    23/  100 | Loss 98593.8369 | Exploration 0.59 | Fruits  1 | Timesteps   36 | Total Reward  266\n",
+      "Episode    24/  100 | Loss 28800.5232 | Exploration 0.57 | Fruits  0 | Timesteps    9 | Total Reward -108\n",
+      "Episode    25/  100 | Loss 46317.6772 | Exploration 0.55 | Fruits  0 | Timesteps   16 | Total Reward -115\n",
+      "Episode    26/  100 | Loss 12321.1023 | Exploration 0.53 | Fruits  0 | Timesteps    5 | Total Reward -104\n",
+      "Episode    27/  100 | Loss 14320.8208 | Exploration 0.51 | Fruits  0 | Timesteps    6 | Total Reward -105\n",
+      "Episode    28/  100 | Loss 36924.6940 | Exploration 0.50 | Fruits  0 | Timesteps   15 | Total Reward -114\n",
+      "Episode    29/  100 | Loss 26089.1305 | Exploration 0.48 | Fruits  0 | Timesteps   10 | Total Reward -109\n",
+      "Episode    30/  100 | Loss 38142.7615 | Exploration 0.46 | Fruits  1 | Timesteps   15 | Total Reward  287\n",
+      "Episode    31/  100 | Loss 31150.8409 | Exploration 0.44 | Fruits  0 | Timesteps   12 | Total Reward -111\n",
+      "Episode    32/  100 | Loss 14017.9629 | Exploration 0.42 | Fruits  0 | Timesteps    7 | Total Reward -106\n",
+      "Episode    33/  100 | Loss 41554.7610 | Exploration 0.41 | Fruits  0 | Timesteps   14 | Total Reward -113\n",
+      "Episode    34/  100 | Loss 49771.2653 | Exploration 0.39 | Fruits  0 | Timesteps   18 | Total Reward -117\n",
+      "Episode    35/  100 | Loss 51516.0449 | Exploration 0.37 | Fruits  0 | Timesteps   18 | Total Reward -117\n",
+      "Episode    36/  100 | Loss 19286.5237 | Exploration 0.35 | Fruits  0 | Timesteps    6 | Total Reward -105\n",
+      "Episode    37/  100 | Loss 141936.7950 | Exploration 0.33 | Fruits  1 | Timesteps   43 | Total Reward  259\n",
+      "Episode    38/  100 | Loss 71172.6719 | Exploration 0.32 | Fruits  0 | Timesteps   27 | Total Reward -126\n",
+      "Episode    39/  100 | Loss 45015.6101 | Exploration 0.30 | Fruits  0 | Timesteps   18 | Total Reward -117\n",
+      "Episode    40/  100 | Loss 29328.6320 | Exploration 0.28 | Fruits  0 | Timesteps   11 | Total Reward -110\n",
+      "Episode    41/  100 | Loss 32972.4678 | Exploration 0.26 | Fruits  0 | Timesteps   11 | Total Reward -110\n",
+      "Episode    42/  100 | Loss 37382.3719 | Exploration 0.24 | Fruits  0 | Timesteps   17 | Total Reward -116\n",
+      "Episode    43/  100 | Loss 41146.9575 | Exploration 0.23 | Fruits  0 | Timesteps   22 | Total Reward -121\n",
+      "Episode    44/  100 | Loss 59674.0154 | Exploration 0.21 | Fruits  0 | Timesteps   29 | Total Reward -128\n",
+      "Episode    45/  100 | Loss 40353.3683 | Exploration 0.19 | Fruits  0 | Timesteps   28 | Total Reward -127\n",
+      "Episode    46/  100 | Loss 76067.7217 | Exploration 0.17 | Fruits  1 | Timesteps   59 | Total Reward  243\n",
+      "Episode    47/  100 | Loss 28057.7844 | Exploration 0.15 | Fruits  0 | Timesteps   19 | Total Reward -118\n",
+      "Episode    48/  100 | Loss 10790.4393 | Exploration 0.14 | Fruits  0 | Timesteps    7 | Total Reward -106\n",
+      "Episode    49/  100 | Loss 5376.2289 | Exploration 0.12 | Fruits  0 | Timesteps    5 | Total Reward -104\n",
+      "Episode    50/  100 | Loss 44045.6171 | Exploration 0.10 | Fruits  0 | Timesteps   38 | Total Reward -137\n",
+      "Episode    51/  100 | Loss 79554.7910 | Exploration 0.10 | Fruits  0 | Timesteps   78 | Total Reward -177\n",
+      "Episode    52/  100 | Loss 20193.6162 | Exploration 0.10 | Fruits  0 | Timesteps   17 | Total Reward -116\n",
+      "Episode    53/  100 | Loss 23893.3852 | Exploration 0.10 | Fruits  0 | Timesteps   27 | Total Reward -126\n",
+      "Episode    54/  100 | Loss 25765.9239 | Exploration 0.10 | Fruits  0 | Timesteps   26 | Total Reward -125\n",
+      "Episode    55/  100 | Loss 23643.4785 | Exploration 0.10 | Fruits  1 | Timesteps   29 | Total Reward  273\n",
+      "Episode    56/  100 | Loss 25951.9600 | Exploration 0.10 | Fruits  0 | Timesteps   29 | Total Reward -128\n",
+      "Episode    57/  100 | Loss 28126.3921 | Exploration 0.10 | Fruits  1 | Timesteps   27 | Total Reward  275\n",
+      "Episode    58/  100 | Loss 16980.5691 | Exploration 0.10 | Fruits  0 | Timesteps   22 | Total Reward -121\n",
+      "Episode    59/  100 | Loss 18014.7000 | Exploration 0.10 | Fruits  0 | Timesteps   20 | Total Reward -119\n",
+      "Episode    60/  100 | Loss 48450.0196 | Exploration 0.10 | Fruits  0 | Timesteps   55 | Total Reward -154\n",
+      "Episode    61/  100 | Loss 20096.5817 | Exploration 0.10 | Fruits  0 | Timesteps   29 | Total Reward -128\n",
+      "Episode    62/  100 | Loss 14760.9485 | Exploration 0.10 | Fruits  1 | Timesteps   20 | Total Reward  282\n",
+      "Episode    63/  100 | Loss 17362.5382 | Exploration 0.10 | Fruits  0 | Timesteps   21 | Total Reward -120\n",
+      "Episode    64/  100 | Loss 29699.0798 | Exploration 0.10 | Fruits  0 | Timesteps   39 | Total Reward -138\n",
+      "Episode    65/  100 | Loss 45012.4550 | Exploration 0.10 | Fruits  0 | Timesteps   56 | Total Reward -155\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode    66/  100 | Loss 53157.7883 | Exploration 0.10 | Fruits  0 | Timesteps   59 | Total Reward -158\n",
+      "Episode    67/  100 | Loss 53062.2732 | Exploration 0.10 | Fruits  1 | Timesteps   62 | Total Reward  240\n",
+      "Episode    68/  100 | Loss 8103.4687 | Exploration 0.10 | Fruits  0 | Timesteps   10 | Total Reward -109\n",
+      "Episode    69/  100 | Loss 45528.2063 | Exploration 0.10 | Fruits  0 | Timesteps   54 | Total Reward -153\n",
+      "Episode    70/  100 | Loss 7953.7781 | Exploration 0.10 | Fruits  0 | Timesteps   10 | Total Reward -109\n",
+      "Episode    71/  100 | Loss 24624.8339 | Exploration 0.10 | Fruits  0 | Timesteps   31 | Total Reward -130\n",
+      "Episode    72/  100 | Loss 22402.2238 | Exploration 0.10 | Fruits  0 | Timesteps   37 | Total Reward -136\n",
+      "Episode    73/  100 | Loss 32283.8262 | Exploration 0.10 | Fruits  1 | Timesteps   39 | Total Reward  263\n",
+      "Episode    74/  100 | Loss 46115.5592 | Exploration 0.10 | Fruits  0 | Timesteps   56 | Total Reward -155\n",
+      "Episode    75/  100 | Loss 16767.6138 | Exploration 0.10 | Fruits  0 | Timesteps   22 | Total Reward -121\n",
+      "Episode    76/  100 | Loss 21685.1405 | Exploration 0.10 | Fruits  0 | Timesteps   30 | Total Reward -129\n",
+      "Episode    77/  100 | Loss 22632.4885 | Exploration 0.10 | Fruits  0 | Timesteps   31 | Total Reward -130\n",
+      "Episode    78/  100 | Loss 7293.5157 | Exploration 0.10 | Fruits  0 | Timesteps   13 | Total Reward -112\n",
+      "Episode    79/  100 | Loss 19331.5540 | Exploration 0.10 | Fruits  0 | Timesteps   24 | Total Reward -123\n",
+      "Episode    80/  100 | Loss 16472.5096 | Exploration 0.10 | Fruits  0 | Timesteps   20 | Total Reward -119\n",
+      "Episode    81/  100 | Loss 20871.2764 | Exploration 0.10 | Fruits  0 | Timesteps   22 | Total Reward -121\n",
+      "Episode    82/  100 | Loss 60248.8222 | Exploration 0.10 | Fruits  0 | Timesteps   78 | Total Reward -177\n",
+      "Episode    83/  100 | Loss 10162.4198 | Exploration 0.10 | Fruits  0 | Timesteps   12 | Total Reward -111\n",
+      "Episode    84/  100 | Loss 27426.4025 | Exploration 0.10 | Fruits  0 | Timesteps   39 | Total Reward -138\n",
+      "Episode    85/  100 | Loss 15629.6415 | Exploration 0.10 | Fruits  0 | Timesteps   27 | Total Reward -126\n",
+      "Episode    86/  100 | Loss 18651.2955 | Exploration 0.10 | Fruits  0 | Timesteps   34 | Total Reward -133\n",
+      "Episode    87/  100 | Loss 21425.6713 | Exploration 0.10 | Fruits  2 | Timesteps   31 | Total Reward  772\n",
+      "Episode    88/  100 | Loss 37403.8249 | Exploration 0.10 | Fruits  0 | Timesteps   47 | Total Reward -146\n",
+      "Episode    89/  100 | Loss 14887.3826 | Exploration 0.10 | Fruits  1 | Timesteps   22 | Total Reward  280\n",
+      "Episode    90/  100 | Loss 21532.1622 | Exploration 0.10 | Fruits  0 | Timesteps   32 | Total Reward -131\n",
+      "Episode    91/  100 | Loss 31593.0515 | Exploration 0.10 | Fruits  0 | Timesteps   39 | Total Reward -138\n",
+      "Episode    92/  100 | Loss 40164.9926 | Exploration 0.10 | Fruits  0 | Timesteps   63 | Total Reward -162\n",
+      "Episode    93/  100 | Loss 7558.6679 | Exploration 0.10 | Fruits  0 | Timesteps    8 | Total Reward -107\n",
+      "Episode    94/  100 | Loss 11291.7625 | Exploration 0.10 | Fruits  0 | Timesteps   13 | Total Reward -112\n",
+      "Episode    95/  100 | Loss 100093.4713 | Exploration 0.10 | Fruits  1 | Timesteps  139 | Total Reward  163\n",
+      "Episode    96/  100 | Loss 14152.0102 | Exploration 0.10 | Fruits  0 | Timesteps   21 | Total Reward -120\n",
+      "Episode    97/  100 | Loss 38420.6387 | Exploration 0.10 | Fruits  0 | Timesteps   53 | Total Reward -152\n",
+      "Episode    98/  100 | Loss 8581.1191 | Exploration 0.10 | Fruits  1 | Timesteps   12 | Total Reward  290\n",
+      "Episode    99/  100 | Loss 6205.5003 | Exploration 0.10 | Fruits  0 | Timesteps    8 | Total Reward -107\n",
+      "Episode   100/  100 | Loss 3328.0310 | Exploration 0.10 | Fruits  0 | Timesteps    7 | Total Reward -106\n"
      ]
     }
    ],
@@ -659,19 +757,19 @@
     "Path(\"debug_log\").mkdir(exist_ok=True)\n",
     "Path(\"debug_stats\").mkdir(exist_ok=True)\n",
     "\n",
-    "num_episodes = 10\n",
+    "num_episodes = 10000\n",
     "env = create_snake_environment(r\"snakeai/levels/10x10-blank.json\")\n",
-    "model = create_dqn_model(env, num_last_frames=4)\n",
+    "model = create_dqn_model(env, num_last_frames=1)\n",
     "\n",
     "agent = DeepQNetworkAgent(\n",
     "    model=model,\n",
-    "    memory_size=-1,\n",
+    "    memory_size=50000,\n",
     "    num_last_frames=model.input_shape[1]\n",
     ")\n",
     "\n",
     "agent.train(\n",
     "    env,\n",
-    "    batch_size=64,\n",
+    "    batch_size=128,\n",
     "    num_episodes=num_episodes,\n",
     "    checkpoint_freq=num_episodes // 10,\n",
     "    discount_factor=0.95\n",
@@ -687,14 +785,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
       "End\n"
      ]
     }
@@ -724,10 +821,10 @@
     "env = create_snake_environment(r\"snakeai/levels/10x10-blank.json\")\n",
     "load_model = tf.keras.models.load_model(r\"saved_model/dqn-final.h5\")\n",
     "\n",
-    "agent_DQN = DeepQNetworkAgent(model=load_model, memory_size=-1, num_last_frames=4)\n",
+    "agent_DQN = DeepQNetworkAgent(model = load_model, memory_size=-1, num_last_frames=1)\n",
     "agent_human = HumanAgent()\n",
     "\n",
-    "play_gui(env, agent_human, 2) #(environment, agent, number of episodes)"
+    "play_gui(env, agent_DQN, 2) #(environment, agent, number of episodes)"
    ]
   },
   {
